-Fixed main brand creation endpoint missing account_id -Fixed checkbox style missing border-radius -Added saveCookie to facilitate cookie setup -Added functions to change the button to a spinning icon during requests and return back to normal -Added createMainBrand function -Added condition account_creation so the app knows when a acoount creation procedure is happening -Added modal for brand creation and main brand creation -Fixed account creation flow

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -389,6 +389,7 @@ background-color: rgba(0,0,0,0.2);
     background-color: rgba(0,0,0,0.3) !important;
     border:0 !important;
     color:white !important;
+    border-radius: 15px !important;
 }
 
 .list-group {
